templates/field-exporter_template.yaml
---
# Source: field-exporter/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-field-exporter-webhook-service
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: field-exporter
    app.kubernetes.io/part-of: field-exporter
    helm.sh/chart: field-exporter-1.3.1
    app.kubernetes.io/name: field-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.3.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: field-exporter
    app.kubernetes.io/instance: release-name
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
---
# Source: field-exporter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-field-exporter-controller-manager
  labels:
    helm.sh/chart: field-exporter-1.3.1
    app.kubernetes.io/name: field-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.3.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: field-exporter
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        control-plane: controller-manager
        app.kubernetes.io/name: field-exporter
        app.kubernetes.io/instance: release-name
      annotations:
        kubectl.kubernetes.io/default-container: manager
    spec:
      containers:
      - args:
        - --leader-elect
        command:
        - /manager
        image: europe-docker.pkg.dev/dp-common-infra-5780/developer-platform-public/deliveryhero/field-exporter:v1.3.1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: release-name-field-exporter-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: field-exporter-tls
---
# Source: field-exporter/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-field-exporter-validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-field-exporter-serving-cert
  labels:
    helm.sh/chart: field-exporter-1.3.1
    app.kubernetes.io/name: field-exporter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.3.1"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJekNDQWd1Z0F3SUJBZ0lRVW9tdkVTci92aGNsYm1zOEtaMzBWekFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGbWFXVnNaQzFsZUhCdmNuUmxjaTFqWVRBZUZ3MHlOREExTVRVeE1UQTJOREphRncwegpOREExTVRNeE1UQTJOREphTUJ3eEdqQVlCZ05WQkFNVEVXWnBaV3hrTFdWNGNHOXlkR1Z5TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQWxyNjhXS1RXV1llTDlzY3FXa2Y1UXJwRHBaU0EKVms4WUxqWHBjVmFzc1RVMDZKTEFsWDhkR25jelVYR0ZBZ3JsL283OVhkdlVpdDA4SFJjOWRDR3B1ZXJUYkM3SApXNmhtWExBU0JoZk [...]
    
    service:
      name: 'release-name-field-exporter-webhook-service'
      namespace: 'default'
      path: /validate-gdp-deliveryhero-io-v1alpha1-resourcefieldexport
  failurePolicy: Fail
  name: vresourcefieldexport.kb.io
  rules:
  - apiGroups:
    - gdp.deliveryhero.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - resourcefieldexports
  sideEffects: None
